# fin-mentor

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/a_stock_analysis/: crew.py
src/a_stock_analysis/config/: agents.yaml  tasks.yaml
src/a_stock_analysis/knowledge/: __init__.py  rag_engine.py
src/a_stock_analysis/knowledge/raw_sources/financial/: q2_financial_knowledge.md  q2_trigger_rules.json
src/a_stock_analysis/knowledge/raw_sources/sentiment/: q3_sentiment_knowledge.md  q3_trigger_rules.json
src/a_stock_analysis/knowledge/raw_sources/strategy/: q4_strategy_knowledge.md  q4_trigger_rules.json
src/a_stock_analysis/knowledge/raw_sources/technical/: q1_market_knowledge.md  q1_trigger_rules.json
src/a_stock_analysis/tools/: __init__.py  a_stock_data_tool.py  calculator_tool.py  financial_tool.py  knowledge_tool.py  market_sentiment_tool.py  q1_knowledge_tool.py  q2_knowledge_tool.py  q3_knowledge_tool.py  q4_knowledge_tool.py  report_storage.py  report_vector_tool.py
